--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "react-giphy-searchbox": "^1.5.4",
     "react-hook-form": "^7.43.1",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.9.0",
     "react-select": "^5.7.0",
     "react-tabs": "^6.0.0",
     "react-textarea-autosize": "^8.4.0",
     "sass": "^1.58.0",
-    "swiper": "^9.0.2",
+    "swiper": "^9.1.0",
     "typescript": "4.9.5"
   }
 }
